# talk

./: .gitignore  Makefile  README.md  setup.cfg
src/speak/: talk.py
