[metadata]
name = talk
description = Red Hat Training Talk Framework
version = 0.0.1
url = https://github.com/jimrigsbee/talk/
long_description = file: README.md
long_description_content_type = text/markdown
author = Jim Rigsbee
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Students
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Training
author-email = jrigsbee@redhat.com
keywords = training, example
maintainer = Jim Rigsbee
maintainer-email = jrigsbee@redhat.com
project_urls =
    Source=https://github.com/jimrigsbee/talk
    Tracker=https://github.com/jimrigsbee/talk/issues

[options]
packages = find:
install_requires =
    click==7.1.2
python_requires = >=3.6
package_dir =
    =src
zip_safe = True

[options.entry_points]
console_scripts =
    talk=speak.talk:main

[options.packages.find]
where = src

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[flake8]
exclude = .git,venv,.venv,env,.env,__pycache__,docs,dist
max-complexity = 10

[tool:pytest]
testpaths = tests
